# how-to-build-cpp

./: README.md
bazel-example/: BUILD.bazel  README.md  WORKSPACE  hello.grpc.pb.h  hello.pb.h  hello.proto  server.cc
bazel-example/proto/: BUILD
bazel-example/server/: BUILD
cmake-example/: .gitignore  CMakeLists.txt  Dockerfile  README.md  dev-docker-start.sh
cmake-example/server/: CMakeLists.txt  hello.cpp
cmake-example/test/: CMakeLists.txt  test.cpp
